# LLMArena

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
llm_arena/: __main__.py  cli.py
llm_arena/core/: game.py  player.py  types.py
llm_arena/games/: __init__.py
llm_arena/games/chess/: __init__.py  game.py  prompts.py  tools.py
llm_arena/games/impostor/: __init__.py  game.py  prompts.py  roles.py  tools.py
llm_arena/games/mafia/: __init__.py  game.py  prompts.py  roles.py  tools.py
llm_arena/games/poker/: __init__.py  game.py  hand_eval.py  prompts.py  tools.py
llm_arena/games/secret_hitler/: __init__.py  game.py  prompts.py  roles.py  tools.py
llm_arena/logging/: transcript.py
llm_arena/ratings/: elo.py  store.py
llm_arena/tournament/: runner.py
